fix vertical align issue

--- a/_source/css/logz-docs.css
+++ b/_source/css/logz-docs.css
@@ -10,13 +10,10 @@ div.big-container {
   grid-template-columns: 300px 500px 1fr;
   grid-template-rows: auto, auto, auto;
   grid-template-areas:
-    "toc breadcrumbs community"
+    "search breadcrumbs community"
     "toc content related"
     "footer footer footer";
   grid-column-gap: 20px;
-    /* "header header header" */
-    "toc content related"
-    "toc footer footer";
   grid-column-gap: 3.5rem;
   grid-row-gap: 20px;
   justify-content: start;
@@ -83,7 +80,8 @@ div.related-links-container {
 div.body-container {
   grid-area: content;
   max-width: 900px;
-  margin: auto;
+  margin: 0 auto;
+  vertical-align: top;
 }
 
 div.card-container {
